--- a/_posts/2019-03-19-第一篇博客.md
+++ b/_posts/2019-03-19-第一篇博客.md
@@ -1,21 +1,24 @@
 ---
 layout:     post
-title: 第一篇博客
+title: Hello World！
 subtitle: 欢迎参观Musen的博客！
 date:       2019-03-19
 author:     Musen
 header-img: img/home-bg-o.jpg
 catalog: true
 tags:
-    - MaxCompute_LearningNotes
+    - Firstblog_WelcomeNotes
 ---
-
+&ensp;或&#8194; //半角
+&emsp;或&#8195; //全角
+&nbsp;或&#160;
 > 欢迎参观Musen的小站！
->说了很久要搭建自己的博客，从大一说到大二，今天终于搭起来啦！就很开心。
-今后Musen会把大学里遇到的各种技术码在小站里，如果有什么问题，欢迎一起探讨！
->有问题可以加Musen的QQ(1045485679)进行探讨。
+>说了很久要搭建自己的博客，从大一说到大二，今天终于搭起来啦！就很开心。Musen今后一定会坚持写blog(当然生病除外，要考试除外，要陪女朋友除外，要写作业除外，要。。。。。。)，把遇到的问题都用小本本记下来再share到小站里。
 
-我的笔记:
+今后Musen会把大学里遇到的各种技术问题码在小站里，如果有什么问题，欢迎一起探讨！
+
+有问题可以加Musen的QQ(1045485679)进行探讨。
+
 
 ![1513243732350.jpg][1513243732350str]
 
