--- a/_posts/2019-03-19-第一篇博客.md
+++ b/_posts/2019-03-19-第一篇博客.md
@@ -19,4 +19,4 @@ tags:
 今后Musen会把大学里遇到的各种技术问题码在小站里，如果有什么问题，欢迎一起探讨！有问题可以加Musen的QQ(**1045485679**)进行探讨。
 
 
-![2222](https://cl.ly/41935955f3a7/2222.jpg)
+![post-HelloWorld.jpg](https://github.com/Musenming/musenming.github.io/blob/master/img/post-HelloWorld.jpg?raw=true)
