modified:   "_posts/2019-3-26-\345\210\251\347\224\250skyell\345\273\272\347\253\213\346\234\254\345\234\260\345\215\232\345\256\242.md"

--- a/_posts/2019-3-26-利用skyell建立本地博客.md
+++ b/_posts/2019-3-26-利用skyell建立本地博客.md
@@ -13,7 +13,9 @@ tags:
 &emsp; 
 &nbsp;
 
- >在本地仓库利用git比在Github上直接修改方便很多，可以实现文件夹的直接修改。但是每次commit和push也让我很是头疼。喜大普奔的是jekyll可以提供本地博客，让喜欢写代码的代码猿们留下了幸福的眼泪，可以在本地直接debug。欧克欧克，话不多说，下面说说我的搭建经历。
+ > **别用commit和push来debug了**
+ 
+ **在本地仓库利用git比在Github上直接修改方便很多，可以实现文件夹的直接修改。但是每次commit和push也让我很是头疼。喜大普奔的是jekyll可以提供本地博客，让喜欢写技术博客的猿猴们流下了幸福的眼泪，可以在本地直接debug。欧克欧克，话不多说，下面说说我的搭建经历。**
 
 # 1. jekyll安装
 
