modified:   _layouts/default.html 	modified:   "_posts/2019-3-26-\345\210\251\347\224\250skyell\345\273\272\347\253\213\346\234\254\345\234\260\345\215\232\345\256\242.md"

--- a/_posts/2019-3-26-利用skyell建立本地博客.md
+++ b/_posts/2019-3-26-利用skyell建立本地博客.md
@@ -4,7 +4,7 @@ title: jekyll搭建本地博客
 subtitle: 还在不停地commit，push？
 date:       2019-03-26
 author:     Musen
-header-img: img/post-jekyll-bg.jpeg
+header-img: img/XiAn/xian33.jpg
 catalog: true
 tags:
     - Blog
